--- a/.github/workflows/pester.yml
+++ b/.github/workflows/pester.yml
@@ -15,7 +15,7 @@ jobs:
     - uses: actions/checkout@v1
     - name: Install pester
       run: Install-Module -Name 'Pester' -Force -SkipPublisherCheck
-      shell: powershell
+      shell: pwsh
     - name: Run tests
       run: Invoke-Pester -Path '.\Tests'
-      shell: powershell
+      shell: pwsh
