--- a/.github/workflows/pester.yml
+++ b/.github/workflows/pester.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: Install pester
-      run: Install-Module -Name 'Pester' -Force -SkipPublisherCheck
+      run: Install-Module -Name 'Pester','PSSQLite' -Force -SkipPublisherCheck
       shell: pwsh
     - name: Run tests
       run: Invoke-Pester -Path '.\Tests'
