--- a/.github/workflows/publishtogallery.yml
+++ b/.github/workflows/publishtogallery.yml
@@ -11,6 +11,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
+    - name: Update PowerShellGet
+      run: Install-Module -Name PowerShellGet -Force; Exit;
+      shell: pwsh
     - name: Run publish script
       env:
         NuGetApiKey: ${{ secrets.NuGetApiKey }}
