Added settings for tech contact

--- a/UofIDMI/Settings.json
+++ b/UofIDMI/Settings.json
@@ -1,4 +1,6 @@
 {
     "DMIURI":"http://www.dmi.illinois.edu/ddd/mktext.asp",
-    "UpdateCacheOnImport":true
+    "UpdateCacheOnImport":true,
+    "DMIEnduserITSupportURI":"http://www.dmi.illinois.edu/ddd/mkexcel.aspx?role=17&roleDesc=End-user%20IT%20Support",
+    "IncludeEnduserITSupport":true
 }
