--- a/.github/workflows/pester.yml
+++ b/.github/workflows/pester.yml
@@ -16,5 +16,5 @@ jobs:
       run: Install-Module -Name 'Pester','PSSQLite' -Force -SkipPublisherCheck
       shell: pwsh
     - name: Run tests
-      run: Invoke-Pester -Path './tests' -EnableExit -ErrorAction Stop
+      run: Invoke-Pester -Path './tests' -CI -ErrorAction Stop
       shell: pwsh
