--- a/.github/workflows/pester.yml
+++ b/.github/workflows/pester.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: Install dependencies
-      run: Install-Module -Name 'PSSQLite' -Force -SkipPublisherCheck; Install-Module -Name 'Pester' -Force -SkipPublisherCheck -RequiredVersion '4.10.1'
+      run: Install-Module -Name 'PSDepend' -Force -SkipPublisherCheck; Invoke-PSDepend -Path '.github\workflows\requirements.psd1' -Force
       shell: pwsh
     - name: Run tests
       run: Invoke-Pester -Path './tests' -EnableExit -ErrorAction Stop
