--- a/.github/workflows/pester.yml
+++ b/.github/workflows/pester.yml
@@ -13,8 +13,8 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: Install dependencies
-      run: Install-Module -Name 'PSSQLite' -Force -SkipPublisherCheck -RequiredVersion '1.1'; Install-Module -Name 'Pester' -Force -SkipPublisherCheck -RequiredVersion '4.10.1'
+      run: Install-Module -Name 'PSSQLite' -Force -SkipPublisherCheck -RequiredVersion '1.1'; Install-Module -Name 'Pester' -Force -SkipPublisherCheck
       shell: pwsh
     - name: Run tests
-      run: Invoke-Pester -Path './tests' -EnableExit -ErrorAction Stop
+      run: Invoke-Pester -Path './tests/' -CI
       shell: pwsh
