--- a/.github/workflows/pester.yml
+++ b/.github/workflows/pester.yml
@@ -8,10 +8,10 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-18.04, macos-latest, windows-latest]
+        os: [ubuntu-latest, macos-latest, windows-latest]
 
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v2
     - name: Install dependencies
       run: Install-Module -Name 'PSSQLite' -Force -SkipPublisherCheck -RequiredVersion '1.1'; Install-Module -Name 'Pester' -Force -SkipPublisherCheck
       shell: pwsh
