--- a/.github/workflows/publishtogallery.yml
+++ b/.github/workflows/publishtogallery.yml
@@ -7,10 +7,10 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v2
     - name: Run publish script
       env:
         NuGetApiKey: ${{ secrets.NuGetApiKey }}
