--- a/.github/workflows/style.yml
+++ b/.github/workflows/style.yml
@@ -1,6 +1,11 @@
 name: ScriptAnalyzer
 
-on: [pull_request]
+on:
+  pull_request:
+    branches:
+      - main
+    paths:
+      - "UofIDMI/**"
 
 jobs:
   build:
